# amazon-photo-uploader

./: Cargo.toml  LICENSE.md  README.md  config.toml.sample  config_setup.py  config_update.py
src/: amzn_photo.rs  config.rs  main.rs
