[package]
name = "amazon-photo-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.13", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.6"
indicatif = "0.17.9"
kamadak-exif = "0.6.1"
log = "0.4.22"
md5 = "0.7.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
walkdir = "2.5.0"
