[package]
name = "amazon-photo-uploader"
version = "0.1.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
indicatif = "0.17.11"
kamadak-exif = "0.6.1"
log = "0.4.27"
md5 = "0.7.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["full", "sync"] }
futures = "0.3"
toml = "0.8.20"
walkdir = "2.5.0"
